TrialoftheTitansPackage/main/default/objects/Education__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Educations</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <type>Lookup</type>
</CustomField>