TrialoftheTitansPackage/main/default/objects/Education__c/fields/DateGraduate__c.field-meta.xml
<CustomField>
    <fullName>DateGraduate__c</fullName>
    <label>DateGraduate</label>
    <type>Date</type>
</CustomField>