TrialoftheTitansPackage/main/default/objects/Education__c/fields/Gpa__c.field-meta.xml
<CustomField>
    <fullName>Gpa__c</fullName>
    <label>Gpa</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>