TrialoftheTitansPackage/main/default/objects/Education__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>