TrialoftheTitansPackage/main/default/objects/Education__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <length>40</length>
    <type>Text</type>
</CustomField>